# recession

./: .gitignore  README.md  pyproject.toml  requirements.txt
outputs/: summary.md
outputs/metrics/: metrics_full.json  metrics_sample.json  predictions_full.csv  predictions_sample.csv  run_metadata_full.json  run_metadata_sample.json
src/recession_classifier/: __init__.py  cli.py  config.py  evaluate.py  model.py  paths.py  pipeline.py  plots.py
src/recession_classifier/data/: __init__.py  build_dataset.py  cache.py  fred.py  market.py  nber.py
tests/: test_nber_labels.py  test_smoke_pipeline.py  test_splits.py
